# libserdec

./: .emacs  LICENSE  TODO  meson.build
gobiserde/: yaml.c  yaml.h
serdec/: string-ops.c  string-ops.h  yaml-deser.c  yaml-error.h  yaml-ser.c  yaml.c  yaml.h
test/: main.c  my-struct.h  test-yaml-deser.c  test-yaml-ser.c  yaml.c
